invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/G3d.h


/*---------------------------------------------------------------------------*/

typedef struct
{

    double north, south;
    double east, west;
    double top, bottom;

    /* dimension of data in "cells"; rows == #x; cols == #y; depths == #z */
    int rows, cols, depths;

    double ns_res, ew_res, tb_res;

    int proj;			/* Projection (see gis.h) */
    int zone;			/* Projection zone (see gis.h) */

} G3D_Region;


/*---------------------------------------------------------------------------*/

struct G3D_Map;


typedef void resample_fn(struct G3D_Map *, int, int, int, void *, int);


/*---------------------------------------------------------------------------*/

typedef struct G3D_Map
{

    char *fileName;
    char *tempName;
    char *mapset;

    /* operation performed on map */
    int operation;		/* G3D_WRITE_DATA or G3D_READ_DATA */

    /* region */
    G3D_Region region;

    /* window for map */
    G3D_Region window;

    /* resmapling function used for map. default is nearest neighbor */
    resample_fn *resampleFun;

    /* units */
    char *unit;

    /* dimension of a single tile in "cells" */
    int tileX, tileY, tileZ;

    /* # of tiles in x, y, and z direction */
    int nx, ny, nz;

    /* data file specific information */

    /* file descriptor */
    int data_fd;		/* file descriptor */

    /* type in which data is stored on file */
    int type;			/* DCELL_TYPE or FCELL_TYPE */

    /* data concering the compression */
    int precision;		/* G3D_MAX_PRECISION or, 0 .. 23 for float, 
				   0 .. 52 for double */
    int compression;		/* G3D_NO_COMPRESSION or G3D_USE_COMPRESSION */
    int useLzw;			/* G3D_USE_LZW or G3D_NO_LZW */
    int useRle;			/* G3D_USE_RLE or G3D_NO_RLE */
    int useXdr;			/* G3D_USE_XDR or G3D_NO_XDR */

    /* pointer to first tile in file */
    int offset;

    /* pointer to the first index entry in file */
    long indexOffset;

    /* sizeof (long) of the system on which the file is/was written */
    int indexLongNbytes;

    /* max # bytes used in the representation of indices; this is equal to */
    /* # bytes used in the representation of "indexOffset" */
    int indexNbytesUsed;

    /* pointer to the last entry in the file */
    int fileEndPtr;

    /* indicates if index is stored in file; used for G3D_READ_DATA only */
    int hasIndex;		/* G3D_HAS_INDEX or G3D_NO_INDEX */

    /* information concerning internal storage of data */

    /* index specific information */
    /* index[i] == the offset of tile "i" in the data file */
    long *index;

    /* tileLength[i] == # bytes used to store tile "i" */
    int *tileLength;

    /* tile specific information */

    /* type in which data is stored in memory */
    int typeIntern;		/* DCELL_TYPE or FCELL_TYPE */

    /* in non-cache mode the "data" array is used to store one tile */
    char *data;

    /* index of tile currently stored in "data"; -1 if none */
    int currentIndex;

    /* cache related variables */

    int useCache;		/* 1 if cache is used */
    void *cache;		/* pointer to cache structure */
    int cacheFD;		/* file discriptor of cache file -- write mode only */
    char *cacheFileName;	/* filename of cache file -- write mode only */
    long cachePosLast;		/* position of last entry in cache file -- write */
    /* mode only */

    /* range info */
    struct FPRange range;

    /* some constants stored for efficiency */

    /* number of bytes required to store a single value of "type" */
    int numLengthExtern;

    /* number of bytes required to store a single value of "typeIntern" */
    int numLengthIntern;

    /* see header.c for details */
    int clipX, clipY, clipZ;
    int tileXY, tileSize;
    int nxy, nTiles;

    /* mask related information */

    int useMask;		/* 1 if mask is used; 0 otherwise */

} G3D_Map;

int G3d_getStandard3dParams(int *, int *, int *, int *, int *, int *, int *,
			    int *, int *, int *, int *, int *);

void G3d_setWindowParams(void);

char *G3d_getWindowParams(void);


/* grass/src/libes/g3d/g3drange.c */
void G3d_range_updateFromTile(G3D_Map *, const void *, int, int, int, int,
			      int, int, int, int);

int G3d_readRange(const char *, const char *, struct FPRange *);

int G3d_range_load(G3D_Map *);

void G3d_range_min_max(G3D_Map *, double *, double *);

int G3d_range_write(G3D_Map *);

int G3d_range_init(G3D_Map *);


/* grass/src/libes/g3d/g3dregion.c */
void G3d_getRegionValue(G3D_Map *, double, double, double, void *, int);

void G3d_adjustRegion(G3D_Region *);

void G3d_regionCopy(G3D_Region *, G3D_Region *);

void G3d_incorporate2dRegion(struct Cell_head *, G3D_Region *);

void G3d_regionFromToCellHead(struct Cell_head *, G3D_Region *);

void G3d_adjustRegionRes(G3D_Region *);

void G3d_extract2dRegion(G3D_Region *, struct Cell_head *);

void G3d_regionToCellHead(G3D_Region *, struct Cell_head *);

int G3d_readRegionMap(const char *, const char *, G3D_Region *);


/* grass/src/libes/g3d/g3dresample.c */
void G3d_nearestNeighbor(G3D_Map *, int, int, int, void *, int);

void G3d_setResamplingFun(G3D_Map *, void (*)());

void G3d_getResamplingFun(G3D_Map *, void (**)());

void G3d_getNearestNeighborFunPtr(void (**)());


/* grass/src/libes/g3d/g3dvolume.c */
void G3d_getVolumeA(void *, double[2][2][2][3], int, int, int, void *, int);

void G3d_getVolume(void *, double, double, double, double, double, double,
		   double, double, double, double, double, double, int, int,
		   int, void *, int);

void G3d_getAlignedVolume(void *, double, double, double, double, double,
			  double, int, int, int, void *, int);

void G3d_makeAlignedVolumeFile(void *, const char *, double, double, double,
			       double, double, double, int, int, int);

/* grass/src/libes/g3d/g3dwindow.c */
void G3d_getValue(G3D_Map *, int, int, int, void *, int);

float G3d_getFloat(G3D_Map *, int, int, int);

double G3d_getDouble(G3D_Map *, int, int, int);

G3D_Region *G3d_windowPtr(void);

void G3d_setWindow(G3D_Region *);

void G3d_setWindowMap(G3D_Map *, G3D_Region *);