OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 424
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getStandard3dParams'):
    G3d_getStandard3dParams = _libs['grass_g3d.6.4.2RC2'].G3d_getStandard3dParams
    G3d_getStandard3dParams.restype = c_int
    G3d_getStandard3dParams.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 426
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setWindowParams'):
    G3d_setWindowParams = _libs['grass_g3d.6.4.2RC2'].G3d_setWindowParams
    G3d_setWindowParams.restype = None
    G3d_setWindowParams.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 427
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getWindowParams'):
    G3d_getWindowParams = _libs['grass_g3d.6.4.2RC2'].G3d_getWindowParams
    G3d_getWindowParams.restype = ReturnString
    G3d_getWindowParams.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 430
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_range_updateFromTile'):
    G3d_range_updateFromTile = _libs['grass_g3d.6.4.2RC2'].G3d_range_updateFromTile
    G3d_range_updateFromTile.restype = None
    G3d_range_updateFromTile.argtypes = [POINTER(G3D_Map), POINTER(None), c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 432
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readRange'):
    G3d_readRange = _libs['grass_g3d.6.4.2RC2'].G3d_readRange
    G3d_readRange.restype = c_int
    G3d_readRange.argtypes = [String, String, POINTER(struct_FPRange)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 433
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_range_load'):
    G3d_range_load = _libs['grass_g3d.6.4.2RC2'].G3d_range_load
    G3d_range_load.restype = c_int
    G3d_range_load.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 434
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_range_min_max'):
    G3d_range_min_max = _libs['grass_g3d.6.4.2RC2'].G3d_range_min_max
    G3d_range_min_max.restype = None
    G3d_range_min_max.argtypes = [POINTER(G3D_Map), POINTER(c_double), POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 435
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_range_write'):
    G3d_range_write = _libs['grass_g3d.6.4.2RC2'].G3d_range_write
    G3d_range_write.restype = c_int
    G3d_range_write.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 436
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_range_init'):
    G3d_range_init = _libs['grass_g3d.6.4.2RC2'].G3d_range_init
    G3d_range_init.restype = c_int
    G3d_range_init.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 439
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getRegionValue'):
    G3d_getRegionValue = _libs['grass_g3d.6.4.2RC2'].G3d_getRegionValue
    G3d_getRegionValue.restype = None
    G3d_getRegionValue.argtypes = [POINTER(G3D_Map), c_double, c_double, c_double, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 440
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_adjustRegion'):
    G3d_adjustRegion = _libs['grass_g3d.6.4.2RC2'].G3d_adjustRegion
    G3d_adjustRegion.restype = None
    G3d_adjustRegion.argtypes = [POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 441
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_regionCopy'):
    G3d_regionCopy = _libs['grass_g3d.6.4.2RC2'].G3d_regionCopy
    G3d_regionCopy.restype = None
    G3d_regionCopy.argtypes = [POINTER(G3D_Region), POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 442
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_incorporate2dRegion'):
    G3d_incorporate2dRegion = _libs['grass_g3d.6.4.2RC2'].G3d_incorporate2dRegion
    G3d_incorporate2dRegion.restype = None
    G3d_incorporate2dRegion.argtypes = [POINTER(struct_Cell_head), POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 443
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_regionFromToCellHead'):
    G3d_regionFromToCellHead = _libs['grass_g3d.6.4.2RC2'].G3d_regionFromToCellHead
    G3d_regionFromToCellHead.restype = None
    G3d_regionFromToCellHead.argtypes = [POINTER(struct_Cell_head), POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 444
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_adjustRegionRes'):
    G3d_adjustRegionRes = _libs['grass_g3d.6.4.2RC2'].G3d_adjustRegionRes
    G3d_adjustRegionRes.restype = None
    G3d_adjustRegionRes.argtypes = [POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 445
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_extract2dRegion'):
    G3d_extract2dRegion = _libs['grass_g3d.6.4.2RC2'].G3d_extract2dRegion
    G3d_extract2dRegion.restype = None
    G3d_extract2dRegion.argtypes = [POINTER(G3D_Region), POINTER(struct_Cell_head)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 446
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_regionToCellHead'):
    G3d_regionToCellHead = _libs['grass_g3d.6.4.2RC2'].G3d_regionToCellHead
    G3d_regionToCellHead.restype = None
    G3d_regionToCellHead.argtypes = [POINTER(G3D_Region), POINTER(struct_Cell_head)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 447
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readRegionMap'):
    G3d_readRegionMap = _libs['grass_g3d.6.4.2RC2'].G3d_readRegionMap
    G3d_readRegionMap.restype = c_int
    G3d_readRegionMap.argtypes = [String, String, POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 450
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_nearestNeighbor'):
    G3d_nearestNeighbor = _libs['grass_g3d.6.4.2RC2'].G3d_nearestNeighbor
    G3d_nearestNeighbor.restype = None
    G3d_nearestNeighbor.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 451
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setResamplingFun'):
    G3d_setResamplingFun = _libs['grass_g3d.6.4.2RC2'].G3d_setResamplingFun
    G3d_setResamplingFun.restype = None
    G3d_setResamplingFun.argtypes = [POINTER(G3D_Map), CFUNCTYPE(UNCHECKED(None), )]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 452
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getResamplingFun'):
    G3d_getResamplingFun = _libs['grass_g3d.6.4.2RC2'].G3d_getResamplingFun
    G3d_getResamplingFun.restype = None
    G3d_getResamplingFun.argtypes = [POINTER(G3D_Map), POINTER(CFUNCTYPE(UNCHECKED(None), ))]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 453
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getNearestNeighborFunPtr'):
    G3d_getNearestNeighborFunPtr = _libs['grass_g3d.6.4.2RC2'].G3d_getNearestNeighborFunPtr
    G3d_getNearestNeighborFunPtr.restype = None
    G3d_getNearestNeighborFunPtr.argtypes = [POINTER(CFUNCTYPE(UNCHECKED(None), ))]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 456
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getVolumeA'):
    G3d_getVolumeA = _libs['grass_g3d.6.4.2RC2'].G3d_getVolumeA
    G3d_getVolumeA.restype = None
    G3d_getVolumeA.argtypes = [POINTER(None), (((c_double * 3) * 2) * 2) * 2, c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 457
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getVolume'):
    G3d_getVolume = _libs['grass_g3d.6.4.2RC2'].G3d_getVolume
    G3d_getVolume.restype = None
    G3d_getVolume.argtypes = [POINTER(None), c_double, c_double, c_double, c_double, c_double, c_double, c_double, c_double, c_double, c_double, c_double, c_double, c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 460
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getAlignedVolume'):
    G3d_getAlignedVolume = _libs['grass_g3d.6.4.2RC2'].G3d_getAlignedVolume
    G3d_getAlignedVolume.restype = None
    G3d_getAlignedVolume.argtypes = [POINTER(None), c_double, c_double, c_double, c_double, c_double, c_double, c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 462
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_makeAlignedVolumeFile'):
    G3d_makeAlignedVolumeFile = _libs['grass_g3d.6.4.2RC2'].G3d_makeAlignedVolumeFile
    G3d_makeAlignedVolumeFile.restype = None
    G3d_makeAlignedVolumeFile.argtypes = [POINTER(None), String, c_double, c_double, c_double, c_double, c_double, c_double, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 465
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getValue'):
    G3d_getValue = _libs['grass_g3d.6.4.2RC2'].G3d_getValue
    G3d_getValue.restype = None
    G3d_getValue.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 466
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getFloat'):
    G3d_getFloat = _libs['grass_g3d.6.4.2RC2'].G3d_getFloat
    G3d_getFloat.restype = c_float
    G3d_getFloat.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 467
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getDouble'):
    G3d_getDouble = _libs['grass_g3d.6.4.2RC2'].G3d_getDouble
    G3d_getDouble.restype = c_double
    G3d_getDouble.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 468
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_windowPtr'):
    G3d_windowPtr = _libs['grass_g3d.6.4.2RC2'].G3d_windowPtr
    G3d_windowPtr.restype = POINTER(G3D_Region)
    G3d_windowPtr.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 469
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setWindow'):
    G3d_setWindow = _libs['grass_g3d.6.4.2RC2'].G3d_setWindow
    G3d_setWindow.restype = None
    G3d_setWindow.argtypes = [POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 470
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setWindowMap'):
    G3d_setWindowMap = _libs['grass_g3d.6.4.2RC2'].G3d_setWindowMap
    G3d_setWindowMap.restype = None
    G3d_setWindowMap.argtypes = [POINTER(G3D_Map), POINTER(G3D_Region)]
